--- a/lib/modules/ad-screen/package.json
+++ b/lib/modules/ad-screen/package.json
@@ -12,7 +12,13 @@
   "license": "MIT",
   "dependencies": {
     "q": "~2.0.0",
+    "async": "~0.9.0",
     "express": "~3.4.8",
-    "lodash": "~1.2.1"
+    "lodash": "~1.2.1",
+    "request": "~2.27.0",
+    "redis": "~0.10.3",
+    "mongodb": "~1.4.7",
+    "moment": "~2.7.0",
+    "generic-pool": "~2.1.1"
   }
 }
