--- a/lib/modules/ad-screen/package.json
+++ b/lib/modules/ad-screen/package.json
@@ -19,6 +19,7 @@
     "redis": "~0.10.3",
     "mongodb": "~1.4.7",
     "moment": "~2.7.0",
-    "generic-pool": "~2.1.1"
+    "generic-pool": "~2.1.1",
+    "jquery-file-upload-middleware": "~0.1.7"
   }
 }
