--- a/lib/modules/ad-screen/package.json
+++ b/lib/modules/ad-screen/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "q": "~2.0.0",
     "async": "~0.9.0",
-    "express": "~3.4.8",
     "lodash": "~1.2.1",
     "request": "~2.27.0",
+    "moment": "~2.7.0",
     "redis": "~0.10.3",
     "mongodb": "~1.4.7",
-    "moment": "~2.7.0",
     "generic-pool": "~2.1.1",
+    "socket.io": "~1.1.0",
+    "express": "~3.4.8",
     "jquery-file-upload-middleware": "~0.1.7"
   }
 }
