--- a/lib/modules/ad-screen/package.json
+++ b/lib/modules/ad-screen/package.json
@@ -16,6 +16,7 @@
     "lodash": "~1.2.1",
     "request": "~2.27.0",
     "moment": "~2.7.0",
+    "mkdirp": "~0.5.0",
     "redis": "~0.10.3",
     "mongodb": "~1.4.7",
     "generic-pool": "~2.1.1",
